[gd_scene load_steps=7 format=2]

[ext_resource path="res://gameplay/buildings/destination_area/festival.png" type="Texture" id=1]
[ext_resource path="res://gameplay/buildings/destination_area/destination_area.gd" type="Script" id=2]
[ext_resource path="res://gameplay/cow_label/cow_counter.tscn" type="PackedScene" id=3]
[ext_resource path="res://gameplay/buildings/destination_area/leaving_cow.wav" type="AudioStream" id=4]
[ext_resource path="res://gameplay/crowd/crowd.tscn" type="PackedScene" id=5]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 69.2026, 69.1051 )

[node name="destination_area" type="Area2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
position = Vector2( 2.27795, -1.7937 )
shape = SubResource( 1 )

[node name="passengers_label" parent="." instance=ExtResource( 3 )]
margin_top = -90.6119
margin_bottom = -90.6119

[node name="leaving_cow_audio" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
bus = "SFX"

[node name="crowd" parent="." instance=ExtResource( 5 )]
position = Vector2( -59.9244, -17.8583 )
n_cows = 700
width = 125
height = 80
[connection signal="body_entered" from="." to="." method="_on_destination_area_body_entered"]
